--- a/Tickets.Api/Tickets.Api/Properties/launchSettings.json
+++ b/Tickets.Api/Tickets.Api/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE_NAME": "TickestDb",
+        "DATABASE_NAME": "TicketsDb",
         "TICKET_COLLECTION_NAME": "Tickets"
       }
     },
@@ -27,7 +27,7 @@
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "DATABASE_NAME": "TickestDb",
+        "DATABASE_NAME": "TicketsDb",
         "TICKET_COLLECTION_NAME": "Tickets"
       }
     }
